Enabled functions for command responses. User can define a python function that executes when a command is called

--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
 	"commands": [
 		{
 			"chat_command": "!day",
-			"response": "thursday",
-			"type": "text"
+			"response": "getday",
+			"type": "call"
 		},
 		{
 			"chat_command": "!penis",
