Fixed bug where responses are sent twice. Fixed bug where message was sent when it wasn't supposed to

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-	"chatname": "#simonvmolzer/$fannynatta11;f553af0cfe503c07",
+	"chatname": "#simonvmolzer/$live:sugbot;a5527e1a77b8694d",
 	"commands": [
 		{
 			"chat_command": "!day",
